--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Replace token placeholder
-      run: sed -i 's/YOUR_GITHUB_TOKEN/${{ secrets.GH_TOKEN }}/' path/to/your/script.js
+      run: sed -i 's/YOUR_GITHUB_TOKEN/${{ secrets.GH_TOKEN }}/' assets\js\loadRepos.js
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
